0.5.6
 - fix: UnboundLocalError "progress" referenced before assignment,
   because "wait-disk" status was not handled
0.5.5
 - fix: prevent disk filling up with cached compressed resources if
   new upload jobs are added with dataset IDs that are sorted above
   existing cache directories
0.5.4
 - fix: possibly fix white UI window on Windows 7
 - fix: start persistent upload jobs always in same order
0.5.3
 - enh: re-use compressed resources from now on
 - enh: check disk usage before compressing data for upload
 - enh: allow to remove zombie cache folders via Maintenance tab
 - ref: upload cache location is now handled with keyword arguments;
   the default is a temporary directory; the GUI uses QStandardPaths
 - ref: migrate favicon location to AppDataLocation
 - ref: migrate upload compress cache to CacheLocation
   (automatically move cached data from old appdirs location)
 - build: base Windows release on Python 3.8
 - setup: require Python 3.8
0.5.2
 - enh: write the obtained dataset identifier to task files that
   were successfully imported
 - enh: allow the user to select a circle when uploading tasks that
   don't have any circle defined
 - fix: interface was not updated (e.g. list of uploads), because
   of wrong default parameter
 - fix: avoid upload jobs with invalid dataset IDs
0.5.1
 - build: fix Windows build pipeline
0.5.0
 - feat: support importing upload jobs from DCOR-Aid task files
 - feat: persistent upload jobs (DCORAid remembers all upload
   jobs and automatically attempts to run them on startup)
 - ref: ckanext-dcor_schemas 0.14.3 now handles activation
   attempts of datasets without resources correctly
 - ref: UploadJob now accepts dataset_id instead of dataset_dict,
   because that is cleaner
0.4.6
 - fix: do not anymore ignore APIErrors during upload
 - fix: support "date" type of resource supplements
 - fix: also check for resource metadata before declaring
   an upload successfull
0.4.5